[package]
name = "cross-contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
resolver = "2"

[dependencies]
ink = { version = "4", default-features = false }

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"], optional = true }

flip = { path = "../flip", default-features = false, features = ["ink-as-dependency"] }
hex-literal = "0.3.3"

[lib]
name = "cross_contract"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "flip/std",
]
ink-as-dependency = []
