[package]
name = "hooks_test"
authors = ["Kevin Wang <wy721@qq.com>"]
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
ink = { version = "4", default-features = false }

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"], optional = true }
pink-extension = { version = "0.4", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "hooks_test"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
]
ink-as-dependency = []
