[package]
name = "start_sidevm"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"
resolver = "2"

[package.metadata.sideprog]
path = "sideprog"

[dependencies]
ink = { version = "4", default-features = false }

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"], optional = true }

pink-extension = { version = "0.4", default-features = false }

[build-dependencies]
run_shell = "0.1"
sp-core = "6.0.0"

[lib]
name = "start_sidevm"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
