[package]
name = "unittests"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }
pink = { version = "0.1.0-dev.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
pink-chain-extension = { version = "0.1.0-dev.0", default-features = false }

[lib]
name = "unittests"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "pink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
