[package]
name = "web3"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

pink-web3 = { version = "0.20", default-features = false, features = ["pink", "signing"] }

[dev-dependencies]
pink-chain-extension = "0.1.0-dev.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-web3/std",
]
ink-as-dependency = []
