[workspace]

[package]
edition = "2021"
name = "sidevm-httpserver"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = { version = "0.14.18", features = ["server", "http1"] }
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
log = "0.4.16"
once_cell = "1.10.0"
sidevm = { version = "0.1", package = "pink-sidevm", path = "/home/kvin/codes/chain/phala/phala-blockchain/crates/pink/sidevm/sidevm" }
tokio = { version = "1", features = ["macros"] }
