[workspace]

[package]
edition = "2021"
name = "sidevm-httpserver"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.16"
once_cell = "1.10.0"
sidevm = { version = "0.1", package = "pink-sidevm" }
tokio = { version = "1", features = ["macros"] }
hyper = { version = "0.14.18", features = ["server", "http1", "stream"] }
seamless = "0.10.0"
http = "0.2.8"
futures = "0.3"
tokio-util = { version = "0.3.1", features= ["compat"] }
bytes = "1.1.0"
anyhow = "1"

