[package]
name = "disbot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sidevm = "0.1"
log = "0.4"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "native_tls_backend", "model", "cache"]
git = "https://github.com/tenheadedlion/serenity.git"
branch = "sidevm"
